Fixed waybar spacing inconsistencies

--- a/stow_home/waybar/.config/waybar/style.css
+++ b/stow_home/waybar/.config/waybar/style.css
@@ -43,33 +43,30 @@ tooltip {
 
 #date, #stats {
     /* margin top and bottom is used to make the bar "float" and keep the size of the modules consistent */
-    margin: 6px 4px;
     border-radius: 12px;
     background-color: rgba(30, 30, 46, 0.25);
 }
 
 #date {
-    margin: 6px 6px;
+    margin: 8px 8px 0;
+}
+
+#stats {
+    margin-top: 8px;
 }
 
 #tray {
     padding: 0 8px;
-    margin: 6px 0;
+    margin: 8px 8px 0;
     border-radius: 12px;
     background-color: rgba(30, 30, 46, 0.25);
-}
-
-/* Add a space to separate the tray from the stats and the tray from the screen's side */
-#tray,
-#stats {
-    margin-right: 6px;
 }
 
 #workspaces {
     background: none;
     border-width: 0px;
-    margin-top: 6px;
-    margin-bottom: 6px;
+    margin-top: 8px;
+    margin-bottom: 0;
 }
 
 #workspaces button {
